Poprawa zadania Szymon Wajs