@@ -5,16 +5,14 @@ import com.capgemini.wsb.fitnesstracker.user.api.UserDTO;
 import com.capgemini.wsb.fitnesstracker.user.api.UserEmailDTO;
 import com.capgemini.wsb.fitnesstracker.user.api.UserNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-
-import static java.util.stream.Collectors.toList;
-import static org.springframework.http.HttpStatus.*;
-import static org.springframework.http.ResponseEntity.ok;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/v1/users")
@@ -26,63 +24,64 @@ class UserController {
 
     @GetMapping("/simple")
     public ResponseEntity<List<UserDTO>> getAllUsers() {
-        return ok(userService.findAllUsers()
+        return ResponseEntity.ok(userService.findAllUsers()
                 .stream()
                 .map(userMapper::toDto)
-                .toList());
+                .collect(Collectors.toList()));
     }
+
 
     @GetMapping("/all")
     public ResponseEntity<List<UserDTO>> getAllUsersDetails() {
-        return ok(userService.findAllUsers()
+        return ResponseEntity.ok(userService.findAllUsers()
                 .stream()
                 .map(userMapper::toDto)
-                .toList());
+                .collect(Collectors.toList()));
     }
 
+
     @GetMapping("/email")
-    public List<UserEmailDTO> getByEmail(@RequestParam String email) {
+    public ResponseEntity<List<UserEmailDTO>> getByEmail(@RequestParam String email) {
         final List<User> userByEmail = userService.getUserByEmail(email);
-        if(userByEmail.isEmpty()) {
+        if (userByEmail.isEmpty()) {
             throw new UserNotFoundException("User Not Found");
         }
-        return userByEmail.stream().map(userMapper::toUserEmailDTO).collect(toList());
+        return ResponseEntity.ok(userByEmail.stream().map(userMapper::toUserEmailDTO).collect(Collectors.toList()));
     }
 
     @GetMapping("/{userId}")
     public ResponseEntity<UserDTO> getUser(@PathVariable Long userId) {
         final Optional<User> optionalUser = userService.getUser(userId);
-        if(optionalUser.isEmpty()) {
+        if (optionalUser.isEmpty()) {
             throw new UserNotFoundException(userId);
         }
-        return ok(userMapper.toDto(optionalUser.get()));
+        return ResponseEntity.ok(userMapper.toDto(optionalUser.get()));
     }
 
     @DeleteMapping("/{userId}")
     public ResponseEntity<Long> deleteUser(@PathVariable Long userId) {
         userService.deleteUser(userId);
-        return new ResponseEntity<>(userId, NO_CONTENT);
+        return ResponseEntity.noContent().build();
     }
 
 
     @PostMapping()
     public ResponseEntity<User> addUser(@RequestBody UserDTO userDto) {
-        return new ResponseEntity<>(userService.createUser(userMapper.toEntity(userDto)), CREATED);
+        return ResponseEntity.status(HttpStatus.CREATED).body(userService.createUser(userMapper.toEntity(userDto)));
     }
 
 
     @GetMapping("/older/{time}")
     public ResponseEntity<List<UserDTO>> getUsersOlderThanGivenAge(@PathVariable LocalDate time) {
         final List<User> olderUsers = userService.getUsersOlderThanProvided(time);
-        if(olderUsers.isEmpty()) {
+        if (olderUsers.isEmpty()) {
             throw new UserNotFoundException("User not found");
         }
-        return ok(olderUsers.stream().map(userMapper::toDto).collect(toList()));
+        return ResponseEntity.ok(olderUsers.stream().map(userMapper::toDto).collect(Collectors.toList()));
     }
 
     @PutMapping("/{userId}")
     public ResponseEntity<User> updateUser(@PathVariable Long userId, @RequestBody UserDTO changedUser) {
-        return new ResponseEntity<>(userService.updateUser(userMapper.saveEntity(changedUser), userId), ACCEPTED);
+        return ResponseEntity.status(HttpStatus.ACCEPTED).body(userService.updateUser(userMapper.saveEntity(changedUser), userId));
     }
-
 }
